feat: implement score-based difficulty scaling for enemy spawns and update Bun lock file.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               style="font-family: 'Press Start 2P', cursive; font-size: 10px; margin-right: 5px; color: #fff; z-index: 30;">HP</span>
             <div class="w-48 h-4 bg-gray-900 border-2 border-gray-600 relative transform -skew-x-12 overflow-hidden">
               <div id="hpBarEl"
-                class="h-full bg-gradient-to-r from-green-400 to-green-600 w-full transition-all duration-200"></div>
+                class="h-full bg-linear-to-r from-green-400 to-green-600 w-full transition-all duration-200"></div>
             </div>
           </div>
         </div>
@@ -113,7 +113,6 @@
 
   <canvas></canvas>
   <script type="module" src="/src/main.ts"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
 </body>
 
 </html>
