--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
   <!-- Pause Modal -->
   <div id="pauseModalEl"
-    class="fixed inset-0 flex items-center justify-center hidden bg-black bg-opacity-80 z-[60] backdrop-blur-sm">
+    class="fixed inset-0 flex items-center justify-center hidden bg-opacity-80 z-[60] backdrop-blur-sm">
     <div
       class="bg-gray-900 p-8 rounded-2xl text-center border-2 border-cyan-500 shadow-[0_0_20px_rgba(6,182,212,0.5)] max-w-sm w-full mx-4">
       <h2 class="text-4xl font-bold mb-6 text-white tracking-wider"
@@ -122,6 +122,10 @@
         <button id="restartBtn"
           class="bg-red-600 text-white px-6 py-3 rounded-xl font-bold hover:bg-red-500 transition duration-200 border-b-4 border-red-800 active:border-b-0 active:translate-y-1 uppercase tracking-wide">
           Restart
+        </button>
+        <button id="pauseLeaderboardBtn"
+          class="bg-purple-600 text-white px-6 py-3 rounded-xl font-bold hover:bg-purple-500 transition duration-200 border-b-4 border-purple-800 active:border-b-0 active:translate-y-1 uppercase tracking-wide">
+          Leaderboard
         </button>
       </div>
     </div>
@@ -140,18 +144,52 @@
     </div>
   </div>
 
-  <div id="modalEl" class="fixed inset-0 flex items-center justify-center z-[60] bg-black bg-opacity-90">
+  <div id="modalEl"
+    class="fixed inset-0 flex items-center justify-center z-[60] bg-transparent bg-opacity-40 backdrop-blur-sm">
     <div
       class="bg-gray-900 max-w-md w-full p-8 text-center rounded-2xl shadow-[0_0_30px_rgba(59,130,246,0.6)] relative border-2 border-blue-500 mx-4">
       <h1 class="text-6xl font-bold leading-none mb-2 text-white" id="bigScoreEl"
         style="font-family: 'Press Start 2P', cursive; text-shadow: 0 0 15px #3b82f6;">0</h1>
-      <p class="text-sm text-blue-300 mb-8 uppercase tracking-widest">Points</p>
-      <div>
+      <p class="text-sm text-blue-300 mb-4 uppercase tracking-widest">Points</p>
+      <p class="text-xs text-yellow-400 mb-8 uppercase tracking-widest">High Score: <span id="highScoreEl">0</span></p>
+      <div class="flex flex-col gap-3">
         <button id="startGameBtn"
           class="bg-blue-600 text-white w-full py-4 rounded-xl text-lg font-bold hover:bg-blue-500 transition duration-200 border-b-4 border-blue-800 active:border-b-0 active:translate-y-1 uppercase tracking-wider shadow-lg">
           Start Game
         </button>
+        <button id="leaderboardBtn"
+          class="bg-purple-600 text-white w-full py-3 rounded-xl text-sm font-bold hover:bg-purple-500 transition duration-200 border-b-4 border-purple-800 active:border-b-0 active:translate-y-1 uppercase tracking-wider shadow-lg">
+          Leaderboard
+        </button>
       </div>
+    </div>
+  </div>
+
+  <!-- Leaderboard Modal -->
+  <div id="leaderboardModal"
+    class="fixed inset-0 flex items-center justify-center hidden bg-black bg-opacity-90 z-[70]">
+    <div
+      class="bg-gray-900 max-w-md w-full p-8 rounded-2xl border-2 border-purple-500 shadow-[0_0_30px_rgba(168,85,247,0.6)] relative mx-4">
+      <h2 class="text-3xl font-bold text-center mb-6 text-white"
+        style="font-family: 'Press Start 2P', cursive; text-shadow: 0 0 10px #a855f7;">LEADERBOARD</h2>
+
+      <div class="space-y-3 mb-8">
+        <div
+          class="flex justify-between text-purple-300 text-xs uppercase tracking-widest border-b border-gray-700 pb-2">
+          <span>Rank</span>
+          <span>Player</span>
+          <span>Score</span>
+        </div>
+        <div id="leaderboardList"
+          class="space-y-3 text-sm font-bold font-mono max-h-[50vh] overflow-y-auto pr-2 custom-scrollbar">
+          <!-- Leaderboard items will be injected here -->
+        </div>
+      </div>
+
+      <button id="closeLeaderboardBtn"
+        class="bg-gray-700 text-white w-full py-3 rounded-xl font-bold hover:bg-gray-600 transition duration-200 border-b-4 border-gray-900 active:border-b-0 active:translate-y-1 uppercase tracking-wide">
+        Close
+      </button>
     </div>
   </div>
 
